Fix missing stroke glyphs on iOS by using system CJK fonts

--- a/css/main.scss
+++ b/css/main.scss
@@ -3,10 +3,8 @@
 ---
 @charset "utf-8";
 
-
-
 // Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "PingFang TC", "PingFang HK", "Heiti SC", "Heiti TC", "Noto Sans", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
@@ -114,6 +112,10 @@ $on-laptop:        800px;
     "demo",
         "license"
 ;
+
+body {
+  font-family: $base-font-family;
+}
 #speed-slider {
   background: $grey-color-light;
 }
